finaliza la clase-pendinete actividad

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style/style.css">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">Navbar</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -44,6 +45,31 @@
           </form>
         </div>
       </nav>
+    </header>
+
+    <main>
+<!--        Fila -->
+      <div class="container">
+        <div class="row mt-4 border">
+          <div class="col-lg-3 col-md-6 col-sm-12 my-auto">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus minus inventore delectus laudantium facere fugit amet, iusto eos excepturi vel. Veniam iure quisquam odio veritatis dolor amet necessitatibus magni aut?</div>
+          <div class="col-lg-3 col-md-6 col-sm-12"><img src="img/image-2.jpg" alt="" class="img-fluid"></div>
+          <div class="col-lg-3 col-md-6 col-sm-12 my-auto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi perspiciatis quibusdam consequatur sapiente modi quasi voluptas qui? Ut odio incidunt laborum, voluptatibus dolor quod quo enim vitae repellendus excepturi! Aspernatur.</div>
+          <div class="col-lg-3 col-md-6 col-sm-12" ><img src="img/image-7.jpg" alt="" class="img-fluid"></div>
+        </div>
+      </div>
+
+      <div class="container">
+          <div class="row mt-4">
+            
+        <div class="col-lg-4 col-md-6 col-sm-12 red order-1 order-sm-1"></div>
+        <div class="col-lg-4 col-md-6 col-sm-12 blue order-3 order-sm-2"></div>
+        <div class="col-lg-4 col-md-6 col-sm-12 orange order-2 order-sm-3"></div>
+
+
+          </div>  
+      </div>
+    </main>
+
     
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
